--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <style>
             body {
                 margin: 0;
-                display: flex;
-                justify-content: center;
+                /* display: flex; */
+                /* justify-content: center; */
                 background-color: #8F7F00;
             }
 
